# virtual-diabetes-clinic

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: main.py
src/cli/: train_and_eval.py
src/ml_service/: config.py  data.py  eval.py  model_io.py  train.py
tests/: test_api.py  test_training.py  test_validation.py
